2004-07-05  David Malcolm  <david@davemalcolm.demon.co.uk>

	* cong-editor-node-text.c: 

	Call the various new functions to spellcheck appropriately (when they are fully implemented)

	* cong-util.c, cong-util.h:

	Added function cong_util_spellcheck_word

	* cong-document.c, cong-document.h: 

	Added function cong_document_should_spellcheck_node

	* cong-editor-node-text.c: 

	Start of spell-checking support

	* cong-document.c, cong-document.h, cong-location.c: 

	Converted make_pango_log_attr_for_node from a static fucntion into the global cong_document_make_pango_log_attr_for_node

	* cong-util.h, cong-util.c:

	Added routines to get a list of all words in a string, and to convert from characters in a UTF-8 string to byte offsets; fixed bugs in CongElementDescription manipulation code 

	* cong-util.c (make_element_description_list_callback): 

	Fix bug; it helps to change the variant if you want a while loop to finish

2004-07-05 Nickolay V. Shmyrev <nshmyrev@yandex.ru>

	* cong-file-selection.h, file.c: Partial fix for #145422. 
 	
	Conglomerate should rely on URIs not on files internally, 
 	since we are going to use gnome-vfs. 

2004-06-26  David Malcolm  <david@davemalcolm.demon.co.uk>

	* file.c (cong_file_selection_make_xml_filter_list): 

	Added hacks to ensure that Glade and XSL files appear in file chooser

	* cong-util.c: 

	Added link to bug 145026

	* cong-tree-view.c:

	Removed debug spewage

	* cong-document.c (cong_document_get_dispspec_element_for_node): 

	Proper handling of case where doucument has no dispspec

2004-06-25  David Malcolm  <dmalcolm@redhat.com>

	* cong-dispspec-element.c, cong-dispspec-element.h, cong-ui-hooks.h, cong-util.c, cong-util.h, global.h, popup.c, tree.c, xmldata.c:

	Rewrite of popup menus so that they work with lists of CongElementDescription rather than CongDispspecElement, so that we don't
	need a dispspec, and can add elements that aren't in the dispspec if there is one.
