@@ -15,5 +15,6 @@
 #undef GXX_STRUCT_ATTRIBUTE_INT
 #undef GXX_STRUCT_ATTRIBUTE_STRING
 #undef GXX_STRUCT_ATTRIBUTE_ENUM
+#undef GXX_STRUCT_ATTRIBUTE_BOOLEAN
 #undef GXX_STRUCT_UNIQUE_CHILD_PTR_TO_STRUCT
 #undef GXX_STRUCT_HASH_TABLE_OF_CHILDREN_WITH_PCDATA
